# mpm_api

./: LICENSE  main.py
app/: README.md  app.py  cleaner.py  config.py  index.html  service.py  storage.py
mpm/: README.md
mpm/synapsis_lib/: README.md  pyproject.toml
mpm/synapsis_lib/examples/: batch_generate.py  groq_provider.py  openai_provider.py  quick.py  test_groq.py
mpm/synapsis_lib/synapsis/: __init__.py  agents.py  core.py  renderer.py  types.py  validator.py
mpm/synapsis_lib/tests/: conftest.py  test_agents.py  test_core.py  test_validator.py
mpm/synapsis_lib/tests/fixtures/: invalid_children_type.yaml  invalid_no_title.yaml  valid_complex.yaml  valid_simple.yaml
